complete getting the request message

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/main/java/Constant.java
+src\main\java\Constant.java
 
 ### Eclipse ###
 .apt_generated
